tests polish